--- a/package.json
+++ b/package.json
@@ -4,22 +4,18 @@
 	"scripts": {
 		"build": "vinxi build",
 		"dev": "sst dev vinxi dev",
-		"start": "vinxi start"
+		"start": "vinxi start",
+		"format": "biome format --write ./src",
+		"lint": "biome lint --apply ./src",
+		"check": "biome check --apply ./src"
 	},
 	"dependencies": {
 		"@fontsource/inter": "^5.0.18",
 		"@kobalte/core": "0.12.6",
 		"@solidjs/router": "^0.13.3",
 		"@solidjs/start": "^1.0.0-rc.1",
-		"autoprefixer": "^10.4.19",
-		"class-variance-authority": "^0.7.0",
-		"clsx": "^2.1.1",
-		"postcss": "^8.4.38",
 		"solid-js": "^1.8.17",
 		"sst": "ion",
-		"tailwind-merge": "^2.3.0",
-		"tailwindcss": "^3.4.3",
-		"tailwindcss-animate": "^1.0.7",
 		"vinxi": "^0.3.11"
 	},
 	"engines": {
@@ -27,5 +23,15 @@
 	},
 	"overrides": {
 		"nitropack": "npm:nitropack-nightly@latest"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "^1.7.3",
+		"tailwind-merge": "^2.3.0",
+		"tailwindcss": "^3.4.3",
+		"tailwindcss-animate": "^1.0.7",
+		"autoprefixer": "^10.4.19",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.1.1",
+		"postcss": "^8.4.38"
 	}
 }
